# wheel-build-task-test

./: .cursorrules  .gitignore  Containerfile  README.md  add-package.sh  auto-merge.sh  build-locally.sh  create-prs.sh  dashboard.sh  find-missing-deps.sh  generate.sh  mark-for-rebuild.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: on-board-package.yaml  package-onboarding.md
.tekton/: Jinja2-pull-request.yaml  Jinja2-push.yaml  arrow-pull-request.yaml  arrow-push.yaml  attrs-pull-request.yaml  attrs-push.yaml  beautifulsoup4-pull-request.yaml  beautifulsoup4-push.yaml  black-pull-request.yaml  black-push.yaml  blinker-pull-request.yaml  blinker-push.yaml  build-pipeline.yaml  charset-normalizer-pull-request.yaml  charset-normalizer-push.yaml  click-pull-request.yaml  click-push.yaml  colorama-pull-request.yaml  colorama-push.yaml  django-pull-request.yaml  django-push.yaml  docutils-pull-request.yaml  docutils-push.yaml  freezegun-pull-request.yaml  freezegun-push.yaml  httpx-pull-request.yaml  httpx-push.yaml  humanize-pull-request.yaml  humanize-push.yaml  idna-pull-request.yaml  idna-push.yaml  isort-pull-request.yaml  isort-push.yaml  jinja2-pull-request.yaml  jinja2-push.yaml  loguru-pull-request.yaml  loguru-push.yaml  markdown-pull-request.yaml  markdown-push.yaml  marshmallow-pull-request.yaml  (+33 more)
builder/: Containerfile
konflux/: README.md  application.yaml  ecp.yaml  kustomization.yaml
release/: pipeline.yaml  push-py-pulp-task.yaml
tests/: __init__.py  test_cli.py  test_find_issues.py  test_fix_issues.py  test_generate.py  test_version.py
(+841 files in other folders)
